<resources>
    <string name="app_name">CryptoPrices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_price">Current Price</string>
    <string name="_300000">300000</string>
    <string name="market_cap">Market Cap</string>
    <string name="_20000000">20000000</string>
    <string name="max_supply">Max Supply</string>
    <string name="_300000000">300000000</string>
    <string name="btc">BTC</string>
    <string name="name">NAME</string>
    <string name="price">PRICE</string>
</resources>