<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/currencyNameDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/btc"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/current_price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"/>
    <TextView
        android:id="@+id/currencyPriceDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_300000"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/market_cap"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/currencyMarketCapDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_20000000"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/max_supply"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/currencyMaxSupplyDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_300000000"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/myfont"
        />

</LinearLayout>